packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/event-type-parent-unknown.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event structure validation, verify
if parent definitions that refer to an undefined
event type are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:int"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[c]]" story="[[c]][[d]]" version="1">
        <parent eventtype="unknown" propertymap="c:a" parent-description="a" siblings-description="a"/>
        <properties>
          <property name="c" object-type="a" description="c" unique="false" optional="true" multivalued="false" merge="drop"/>
          <property name="d" object-type="a" description="d" unique="false" optional="true" multivalued="false" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
